--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,52 @@ jobs:
           echo "::add-mask::${{ inputs.countries }}"
           echo "::add-mask::TARGET_URL=${{ inputs.url }}"
           echo "::add-mask::COUNTRIES=${{ inputs.countries }}"
+
+      - name: Checkout private repo (read-only)
+        uses: actions/checkout@v4
+        with:
+          repository: aynibakbabm/private-repo
+          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+          path: .priv
+          persist-credentials: false
+
+      - name: Preflight (deps & docker sanity)
+        run: |
+          set -e
+          sudo apt-get update -y
+          sudo apt-get install -y curl
+          docker --version
+
+      - name: Setup Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Run park.sh quietly (masked)
+        env:
+          TARGET_URL: ${{ inputs.url }}
+          COUNTRIES: ${{ inputs.countries }}
+          RUNNER_INDEX: ${{ matrix.runner_index }}
+        shell: bash
+        run: |
+          set -e
+          chmod +x .priv/park.sh || true
+          ( set +x; .priv/park.sh > run.log 2>&1 ) &
+          pid=$!
+          while kill -0 "$pid" 2>/dev/null; do
+            echo "runner-${RUNNER_INDEX} running..."
+            sleep 300
+          done
+          wait "$pid" || {
+            echo "----- SANITIZED LAST 200 LINES OF run.log -----"
+            tail -n 200 run.log \
+              | sed -E 's#https?://[^[:space:]]+#[REDACTED_URL]#g' \
+              | sed -E 's/([0-9]{1,3}\.){3}[0-9]{1,3}/[REDACTED_IP]/g' \
+              | sed -E 's/'"$COUNTRIES"'/[REDACTED_COUNTRIES]/g'
+            exit 1
+          }
+
+      - name: Secure cleanup (no artifacts)
+        if: always()
+        run: |
+          shred -u run.log || rm -f run.log || true
